# hexq

./: .gitignore  CMakeLists.txt  DirectedGraph.cpp  DirectedGraph.hpp  Doxyfile  Makefile  README.md  ale.cfg  calculate_q_mean.cpp  circular_buffer.hpp  directed_graph.cpp  directed_graph.hpp  explained_assert.hpp  hexq.cpp  hexq_level.cpp  hexq_level.hpp  main.cpp  markov_decision_process.hpp  montezuma_mdp.cpp  montezuma_mdp.hpp  montezuma_options_mdp.cpp  montezuma_options_mdp.hpp  montezuma_potential.h  plain_sarsa.cpp  plot.py  plot2.py  plot_potential.py  softmax_random_choice.hpp  taxi_domain_mdp.cpp  taxi_domain_mdp.hpp  upgrade_montezuma_q.cpp  visualize_q.cpp
runs/: annealed_with_options.txt  annealed_with_options_nophi.txt  annealed_without_options.txt  annealed_without_options_nophi.txt  not_annealed_without_options.txt  not_annealed_without_options_nophi.txt
runs/annealed_with_options_9995/: README.txt  rewards_nophi.txt
runs/annealed_without_options/: README.txt
runs/annealed_without_options_each_frame/: rewards.txt  rewards_nophi.txt
runs/not_annealed_with_options/: README.txt  rewards.txt  rewards_nophi.txt
runs/not_annealed_with_options_9995/: rewards_nophi.txt
runs/not_annealed_without_options/: README.txt
runs/options_annealed_fast_each_frame/: README.txt  rewards.txt  rewards_nophi.txt
runs/options_annealed_slow_each_frame/: README.txt  rewards.txt  rewards_nophi.txt
runs/options_eps0.05_each_frame/: README.txt  rewards.txt  rewards_nophi.txt
runs/options_eps0.1_each_frame/: README.txt  rewards.txt  rewards_nophi.txt
